--- a/web/index.html
+++ b/web/index.html
@@ -21,7 +21,7 @@
     <meta name="theme-color" content="#FF8A3D" />
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <div id="root"><!--ssr-outlet--></div>
+    <script type="module" src="/src/entry-client.tsx"></script>
   </body>
 </html>
